# openlit

./: .cursorrules  .gitignore  .gitmodules  .vale.ini  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  INSTALLATION_VERIFICATION.md  ISSUE_971_SETUP.md  MERGE_READINESS_SECURITY_FINDINGS.md  MY_CONTRIBUTION_GUIDE.md  OPAMP_DEPLOYMENT.md  README.md  SECURITY.md  ZERO_CODE_INSTRUMENTATION_GUIDE.md  ch.py  clickhouse.py  comparative_test.py  compare_all_mcp.py  dashboard.json  debug_cli.py  debug_mcp.py  debug_mem0_spans.py  devbox.json  docker-compose.dev.yaml  docker-compose.yml  env.example  external_o11y.md  fastmcp_client_example.py  fastmcp_server_example.py  flake.nix  grafana.yml  langgraph_methods_report.md  mcp_client.py  mcp_client_comparison.py  mcp_server.py  mcp_server_openllmetry.py  mcp_test_client.py  (+14 more)
openlmt/python/: .pylintrc  pyproject.toml
openlmt/python/src/: __init__.py  langtest.py
openlmt/python/src/anthropic/: __init__.py  async_anthropic.py
openlmt/python/src/azure_openai/: __init__.py  azure_openai.py
openlmt/python/src/cohere/: __init__.py
openlmt/python/src/openai/: __init__.py  async_openai.py  openai.py
openlmt/python/src/openlmt/: __helpers.py  __init__.py
openlmt/python/src/openlmt/anthropic/: __init__.py  anthropic.py  async_anthropic.py
openlmt/python/src/openlmt/azure_openai/: __init__.py  __init__.py.hold  async_azure_openai.py  azure_openai.py
openlmt/python/src/openlmt/chroma/: __init__.py  chroma.py
openlmt/python/src/openlmt/cohere/: __init__.py  cohere.py
openlmt/python/src/openlmt/instrumentation/anthropic/: __init__.py
openlmt/python/src/openlmt/instrumentation/chroma/: __init__.py  chroma.py
openlmt/python/src/openlmt/instrumentation/cohere/: __init__.py
openlmt/python/src/openlmt/instrumentation/langchain/: __init__.py
openlmt/python/src/openlmt/instrumentation/mistral/: __init__.py  async_mistral.py
openlmt/python/src/openlmt/instrumentation/openai/: __init__.py  async_azure_openai.py  openai.py
openlmt/python/src/openlmt/instrumentation/pinecone/: __init__.py  pinecone.py
openlmt/python/src/openlmt/instrumentation/transformers/: __init__.py  transformers.py
openlmt/python/src/openlmt/langchain/: __init__.py  core.py  langchain.py
openlmt/python/src/openlmt/mistral/: __init__.py  async_mistral.py  mistral.py
openlmt/python/src/openlmt/openai/: __init__.py  async_azure_openai.py  async_openai.py  azure_openai.py  openai.py
openlmt/python/src/openlmt/otel/: __tracing.py  tracing.py
openlmt/python/src/openlmt/pinecone/: __init__.py  pinecone.py
openlmt/python/src/openlmt/semcov/: __init__.py
openlmt/python/src/openlmt/transformers/: __init__.py  transformers.py
openlmt/python/src/otel/: tracing.py
openlmt/python/tests/: requirements.txt  test_anthropic.py  test_anthropic.py.hold  test_azure.py.hold  test_cohere.py  test_mistral.py  test_mistral.py.hold  test_openai.py
sdk/python/: .pylintrc  ADDING_NEW_PARAMETERS.md  OPENLIT_CONFIGURATION.md  README.md  pyproject.toml  pytest.ini
sdk/python/src/: sample_langgraph_app.py  test_openai_agents_auto.py
sdk/python/src/openlit/: __helpers.py  __init__.py  _config.py  _instrumentors.py  score.py  threat.py
sdk/python/src/openlit/cli/: __init__.py  config.py  main.py
sdk/python/src/openlit/cli/bootstrap/: sitecustomize.py
sdk/python/src/openlit/evals/: __init__.py  all.py  bias_detection.py  hallucination.py  offline.py  offline_types.py  toxicity.py  utils.py
sdk/python/src/openlit/guard/: __init__.py  _base.py  _integration.py  _pipeline.py  all.py  custom.py  moderation.py  pii.py  prompt_injection.py  restrict_topic.py  schema.py  sensitive_topic.py  topic_restriction.py  utils.py
sdk/python/src/openlit/instrumentation/ag2/: __init__.py  ag2.py  async_ag2.py  async_ag2_temp.py  utils.py
sdk/python/src/openlit/instrumentation/agent_framework/: __init__.py  async_agent_framework.py  utils.py
sdk/python/src/openlit/instrumentation/agent_sre/: __init__.py  agent_sre.py  utils.py
sdk/python/src/openlit/instrumentation/agno/: __init__.py  agno.py  async_agno.py  utils.py
sdk/python/src/openlit/instrumentation/ai21/: __init__.py  ai21.py  async_ai21.py  utils.py
sdk/python/src/openlit/instrumentation/anthropic/: __init__.py  anthropic.py  utils.py  (+1 more)
sdk/python/src/openlit/observability/: __init__.py  threat_event.py
sdk/python/src/openlit/otel/: events.py  metrics.py  tracing.py
sdk/python/src/openlit/semcov/: __init__.py
sdk/python/tests/: requirements.txt  test_agent_framework.py  test_agent_metrics.py  test_agno.py  test_ai21.py  test_anthropic.py  test_anthropic.py.hold  test_anthropic_parallel_tool_calls.py  test_assemblyai.py  test_assemblyai_cost.py  test_astra.py  test_azure.py.hold  test_azure_ai_inference.py  test_azure_ai_inference.py.hold  test_cache_pricing.py  test_chroma.py  test_claude_agent_sdk.py  test_cohere.py  test_cohere.py.hold  test_context_detach.py  test_controlflow.py  test_disable_metrics.py  test_elevenlabs.py  test_elevenlabs.py.hold  test_embedchain.py  test_evaluate_rule.py  test_firecrawl.py  test_firecrawl.py.hold  test_genai_helpers.py  test_google_adk.py  test_google_ai_studio.py  test_google_ai_studio.py.hold  test_google_ai_studio_parallel_function_calls.py  test_gradient.py  test_groq.py  test_groq_trace_comparison.py  test_guard_integration.py  test_guard_pii.py  test_guard_pipeline.py  test_guard_prompt_injection.py  (+45 more)
(+3400 files in other folders)
