[tool.poetry]
name = "openlmt"
version = "0.0.1"
description = "OpenTelemetry native Python library for Automatic Instrumentation of LLM Applications"
authors = ["Doku Labs"]
repository = "https://github.com/dokulabs/dokumetry-python"
readme = "README.md"
homepage = "https://github.com/dokulabs/dokumetry-python"
keywords = ["OpenTelemetry", "llm", "tracing", "openai", "anthropic", "claude", "cohere", "llm monitoring", "observability", "monitoring", "gpt", "Generative AI", "chatGPT"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
openai = "^1.1.0"
anthropic = "^0.19.0"
mistralai = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
