[tool.poetry]
name = "openlit"
version = "1.36.1"
description = "OpenTelemetry-native Auto instrumentation library for monitoring LLM Applications and GPUs, facilitating the integration of observability into your GenAI-driven projects"
authors = ["OpenLIT"]
license = "Apache-2.0"
repository = "https://github.com/openlit/openlit/tree/main/openlit/python"
readme = "README.md"
homepage = "https://github.com/openlit/openlit/tree/main/openlit/python"
keywords = ["OpenTelemetry", "otel", "otlp","llm", "tracing", "openai", "anthropic", "claude", "cohere", "llm monitoring", "observability", "monitoring", "gpt", "Generative AI", "chatGPT", "gpu"]

packages = [
  { include = "openlit", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.26.0"
schedule = "^1.2.2"
pydantic = "^2.0.0"
xmltodict = ">=0.13.0,<1.0.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-instrumentation = ">=0.52b0,<1.0.0"
# Official OpenTelemetry HTTP Framework instrumentations
opentelemetry-instrumentation-asgi = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-django = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-fastapi = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-flask = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-pyramid = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-starlette = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-falcon = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-tornado = ">=0.52b0,<1.0.0"
# Official OpenTelemetry HTTP Client instrumentations
opentelemetry-instrumentation-aiohttp-client = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-httpx = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-requests = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-urllib = ">=0.52b0,<1.0.0"
opentelemetry-instrumentation-urllib3 = ">=0.52b0,<1.0.0"
# Official OpenTelemetry System Metrics (optional)
opentelemetry-instrumentation-system-metrics = {version = ">=0.52b0,<1.0.0", optional = true}
openai = "^1.1.1"
anthropic = ">=0.42.0,<1.0.0"
openai-agents = ">=0.0.3"
langchain = "^0.3.15"

[tool.poetry.scripts]
openlit-instrument = "openlit.cli.main:run"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
